--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,30 +7,31 @@
     <title>Timer page</title>
   </head>
   <body>
+    <script src="./js/1-timer.js" type="module"></script>
     <section>
       <a href="./index.html">Go back</a>
     </section>
     
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
-    
-    <div class="timer">
-      <div class="field">
-        <span class="value" data-days>00</span>
-        <span class="label">Days</span>
-      </div>
-      <div class="field">
-        <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
-      </div>
-      <div class="field">
-        <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
-      </div>
-      <div class="field">
-        <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
-      </div>
+  <input type="text" id="datetime-picker" />
+  <button type="button" id="start-btn" disabled>Start</button>
+  
+  <div class="timer">
+    <div class="field">
+      <span class="value" id="days">00</span>
+      <span class="label">Days</span>
     </div>
+    <div class="field">
+      <span class="value" id="hours">00</span>
+      <span class="label">Hours</span>
+    </div>
+    <div class="field">
+      <span class="value" id="minutes">00</span>
+      <span class="label">Minutes</span>
+    </div>
+    <div class="field">
+      <span class="value" id="seconds">00</span>
+      <span class="label">Seconds</span>
+    </div>
+  </div>
   </body>
 </html>
